--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://yoursite.com
-title: Your Awesome Site
+url: https://wilfriedcomte.github.io
+title: Thinging
 email: your-email@domain.com
 author: Your Name
 description: > # "Write an awesome description for your new site here. 
@@ -27,7 +27,7 @@ permalink: pretty
 
 social:
   - title: twitter
-    url: https://twitter.com/SBootstrap
+    url: https://twitter.com/lamouchedebilou
   - title: github
     url: https://github.com/IronSummitMedia/startbootstrap
   - title: linkedin
